<resources>
    <string name="app_name">Student Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="add_the_user_information">Add student details</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="birthdata">BirthDate</string>
    <string name="more_information">More Information</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>