<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAF4F4"
        tools:context=".view.AddInfoFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageUser"
                        android:src="@drawable/ic_camera"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:strokeWidth="2dp"
                        android:elevation="8dp"
                        app:strokeColor="@color/purple_500"
                        app:shapeAppearanceOverlay="@style/Circular"
                        />
                    <View
                        android:alpha=".4"
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_margin="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold|normal"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:ems="10"
                            android:maxLines="1"
                            android:inputType="textPersonName"
                             />
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_no"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_margin="5dp"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/MobileNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold|normal"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:ems="12"
                                android:maxLines="1"
                                android:inputType="phone"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/birthdata"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_margin="5dp"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/dataBirth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold|normal"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:ems="10"
                                android:maxLines="1"
                                android:inputType="date"
                                />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="EmailAddress"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_margin="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold|normal"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:ems="25"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="start|top"
                        android:layout_gravity="start|top"
                        android:hint="@string/more_information"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_margin="5dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/info"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:textStyle="bold|normal"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:maxLines="6"
                            android:layout_gravity="start|top"
                            android:gravity="start|top"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/addInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:elevation="15dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold|normal"
                            app:backgroundTint="@color/purple_200"
                            app:shapeAppearanceOverlay="@style/Button8" />

                        <Button
                            android:id="@+id/cancelBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:elevation="15dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/cancel"
                            android:textAllCaps="false"
                            android:textColor="@color/purple_200"
                            android:textSize="16sp"
                            android:textStyle="bold|normal"
                            app:backgroundTint="@color/white"
                            app:shapeAppearanceOverlay="@style/Button8" />


                    </LinearLayout>




                </LinearLayout>


            </LinearLayout>


        </ScrollView>


    </RelativeLayout>



</layout>